@@ -15,8 +15,12 @@ import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.util.AbstractMap;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
+
+import static java.util.Objects.nonNull;
 
 @SpringBootApplication
 @RestController
@@ -28,7 +32,18 @@ public class SocialApplication extends WebSecurityConfigurerAdapter {
 
     @RequestMapping("/user")
     public Map<String, Object> user(@AuthenticationPrincipal OAuth2User principal) {
-        return Collections.singletonMap("name", principal.getAttribute("login"));
+        if (nonNull(principal)) {
+            final String name = principal.getAttribute("login");
+            return Map.of(
+                "name", nonNull(name) ? name : "",
+                "authenticated", true
+            );
+        } else {
+            return Map.of(
+                "name", "",
+                "authenticated", false
+            );
+        }
     }
 
     @Override
@@ -41,7 +56,5 @@ public class SocialApplication extends WebSecurityConfigurerAdapter {
             .and().exceptionHandling()
             .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED))
             .and().logout().invalidateHttpSession(true).logoutSuccessUrl("/");
-        ;
     }
-
 }
